crates/test-files/fixtures/compile_errors/duplicate_generic_params.fe
trait Computable {
  fn compute(self, val: u256) -> u256;
}

trait Computable2 {
  fn compute2(self, val: u256) -> u256;
}

struct Yay {
  fn foo<T: Computable, T: Computable2>(val1: T, val2: T) {
      return
  }
}
